# dPrune

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
dprune/: __init__.py  callbacks.py
dprune/pruners/: selection.py
dprune/scorers/: __init__.py  supervised.py  unsupervised.py
examples/: forgetting_score_example.ipynb  supervised_pruning_with_forgetting_score.ipynb  unsupervised_pruning_with_kmeans.ipynb  unsupervised_pruning_with_kmeans_example.ipynb  unsupervised_pruning_with_perplexity.ipynb
tests/: test_callbacks.py  test_pruners.py  test_scorers.py
