[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dprune"
version = "0.0.1"
authors = [
  { name="USER", email="user@example.com" },
]
description = "A library for data pruning with Hugging Face datasets and transformers."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.0.0",
    "datasets>=2.0.0",
    "scikit-learn>=1.0.0",
    "tqdm>=4.0.0",
    "pandas>=1.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
]
